src/styles/global.css
/* ... */
  
  /* FLOW: DOWN */
  [data-tooltip][data-flow^="down"]::before {
    top: 100%;
    border-top-width: 0;
    border-bottom-color: #444;
  }
  [data-tooltip][data-flow^="down"]::after {
    top: calc(100% + 5px);
  }
  [data-tooltip][data-flow^="down"]::before,
  [data-tooltip][data-flow^="down"]::after {
    left: 50%;
    transform: translate(-50%, .5em);
  }
  
  /* FLOW: LEFT */
  [data-tooltip][data-flow^="left"]::before {
    top: 20%;
    border-right-width: 0;
    border-left-color: #444;
    left: calc(0em - 5px);
    transform: translate(-.5em, -50%);
  }
  [data-tooltip][data-flow^="left"]::after {
    top: 20%;
    right: calc(100% + 5px);
    transform: translate(-.5em, -50%);
  }
  
  /* FLOW: RIGHT */
  [data-tooltip][data-flow^="right"]::before {
    top: 20%;
    border-left-width: 0;
    border-right-color: #444;
    right: calc(0em - 5px);
    transform: translate(.5em, -50%);
  }
  [data-tooltip][data-flow^="right"]::after {
    top: 20%;
    left: calc(100% + 5px);
    transform: translate(.5em, -50%);
  }
  
  /* KEYFRAMES */
  @keyframes data-tooltips-vert {
    to {
      opacity: .9;
      transform: translate(-50%, 0);
    }
  }
  
  @keyframes data-tooltips-horz {
    to {
      opacity: .9;
      transform: translate(0, -50%);
    }
  }
  
  /* FX All The Things */ 
  [data-tooltip]:not([data-flow]):hover::before,
  [data-tooltip]:not([data-flow]):hover::after,
  [data-tooltip][data-flow^="up"]:hover::before,
  [data-tooltip][data-flow^="up"]:hover::after,
  [data-tooltip][data-flow^="down"]:hover::before,
  [data-tooltip][data-flow^="down"]:hover::after {
    animation: data-tooltips-vert 300ms ease-out forwards;
  }
  
  [data-tooltip][data-flow^="left"]:hover::before,
  [data-tooltip][data-flow^="left"]:hover::after,
  [data-tooltip][data-flow^="right"]:hover::before,
  [data-tooltip][data-flow^="right"]:hover::after {
    animation: data-tooltips-horz 300ms ease-out forwards;
  }

h2.expander-active {
  transition: all 0.4s;
}
  
h2.expander-inactive {
  font-weight:normal;
  transition: all 0.4s;
}

/*Expander CSS*/
.expander-container {
  margin: 0 auto;
  overflow: hidden;
  display:inline-block;
}

.expander-visible {
  opacity: 1;
  height: auto;
  transition: all .4s;
}

.expander-invisible {
  opacity: 0;
  transition: all .4s;
  display: none !important; /* because the link was still clickable at 0 opactiy, may leave this or change later */
}
a, a:hover {
  color: inherit;
}
body h1 {
  font-family: 'Geo';
  font-size: 3em;
  font-weight: 700;
}
body h2 {
  font-family: 'Geo';
  font-size: 1.5em;
  font-weight: 700;
  margin: unset;
}
body p {
  font-family: 'Inter', sans-serif;
  font-size: 1.1em;
}
label {
  color: var(--accent);
  font-weight:bold;
}
.devicon {
  max-height: 20px;
}
.card > hr {
  margin-left: -15px;
  margin-right: -15px;
  margin-top: 0px;
  margin-bottom: 10px;
}
img {
  max-width: 200px; 
  height: auto;
  border-radius: 1rem;
}

.transition {
  transition: all 0.4s;
}

.info ul {
  list-style-type: none;
  text-align: right;
  font-weight: bold;
}
.info p a {
  color: var(--accent);
}

  
/* iconify svgs */
.streamline-pixel--logo-linkedin {
    display: inline-block;
    width: 45px;
    height: 45px;
    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath fill='%23000' d='M30.47 3.05H32v25.9h-1.53Zm-1.52 25.9h1.52v1.53h-1.52Zm0-27.43h1.52v1.53h-1.52Zm-1.53 3.05h1.53v22.86h-1.53ZM3.04 30.48h25.91V32H3.04Zm1.53-3.05h22.85v1.52H4.57Zm18.28-12.19h-1.52v-1.53h-3.05v1.53h-1.52v-1.53h-3.05v9.15h3.05v-4.57h1.52v-1.53h1.53v1.53h1.52v4.57h3.05v-6.1h-1.53zM7.61 13.71h3.05v9.15H7.61Zm0-4.57h3.05v3.05H7.61ZM4.57 3.05h22.85v1.52H4.57ZM3.04 0h25.91v1.52H3.04Zm0 4.57h1.53v22.86H3.04ZM1.52 28.95h1.52v1.53H1.52Zm0-27.43h1.52v1.53H1.52ZM0 3.05h1.52v25.9H0Z'/%3E%3C/svg%3E");
    background-color: currentColor;
    -webkit-mask-image: var(--svg);
    mask-image: var(--svg);
    -webkit-mask-repeat: no-repeat;
    mask-repeat: no-repeat;
    -webkit-mask-size: 100% 100%;
    mask-size: 100% 100%;
    color:var(--accent);
    }
/* ... */

